@@ -26,6 +26,7 @@ ToDo/Notes:
 	- Implement extent mft record deallocation
 	  fs/ntfs/mft.c::ntfs_extent_mft_record_free().
 	- Splitt runlist related functions off from attrib.[hc] to runlist.[hc].
+	- Add vol->mft_data_pos and initialize it at mount time.
 
 2.1.19 - Many cleanups, improvements, and a minor bug fix.
 
